# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "openvdb-sys"
version = "0.0.1"
authors = ["Zhixing Zhang <me@neoto.xin>"]
edition = "2018"
description = " Native bindings to OpenVDB."
readme = "README.md"
repository = "https://github.com/Neo-Zhixing/openvdb-sys"
license = "MPL-2.0"
keywords = ["voxel", "vdb", "openvdb"]
categories = ["graphics", "game-development", "data-structures", "external-ffi-bindings"]

[badges]
# Maintenance: `status` is required. Available options are:
# - `actively-developed`: New features are being added and bugs are being fixed.
# - `passively-maintained`: There are no plans for new features, but the maintainer intends to
#   respond to issues that get filed.
# - `as-is`: The crate is feature complete, the maintainer does not intend to continue working on
#   it or providing support, but it works for the purposes it was designed for.
# - `experimental`: The author wants to share it with the community but is not intending to meet
#   anyone's particular use case.
# - `looking-for-maintainer`: The current maintainer would like to transfer the crate to someone
#   else.
# - `deprecated`: The maintainer does not recommend using this crate (the description of the crate
#   can describe why, there could be a better solution available or there could be problems with
#   the crate that the author does not want to fix).
# - `none`: Displays no badge on crates.io, since the maintainer has not chosen to specify
#   their intentions, potential crate users will need to investigate on their own.
maintenance = { status = "experimental" }

[dependencies]

[build-dependencies]
bindgen = "0.54"
cc = "1.0"
cmake = "0.1"
